子供の追加登録とその他細かい修正

--- a/NameListSample/childmente.html
+++ b/NameListSample/childmente.html
@@ -23,12 +23,11 @@
 			<h2><a href="./">お子様情報</a></h2>
 		</div>
 		<div id="head_menu">
-			<a href="トップ画面.html">HOME</a>｜
-			<a href="contents01.html">コンテンツ1</a>｜
-			<a href="contents01.html">コンテンツ2</a>｜
-			<a href="contents01.html">コンテンツ3</a>｜
-			<a href="contents01.html">コンテンツ4</a>｜
-			<a href="contents01.html">メニューは増減が可能です</a>｜
+			<a href="TOP.html">HOME</a>｜
+			<a href="entryevent.html">イベント情報登録</a>｜
+			<a href="sendmail.html">メール送信画面</a>｜
+			<a href="changeevent.html">イベントの変更</a>｜
+			<a href="listmentenance.html">名簿メンテナンス</a>｜
 		</div>
 		<div id="contents">
 
@@ -41,6 +40,7 @@
 		urlPrm[kv[0]]=kv[1];
 	}
 	var childid = urlPrm.childid
+	var parentid = urlPrm.parentid
 </script>
 
 			<div>
