--- a/NameListSample/TOP.html
+++ b/NameListSample/TOP.html
@@ -27,7 +27,7 @@
 			<a href="entryevent.html">イベント情報登録</a>｜
 			<a href="sendmail.html">メール送信画面</a>｜
 			<a href="changeevent.html">イベントの変更</a>｜
-			<a href="entryuser.html">名簿メンテナンス</a>｜
+			<a href="listmentenance.html">名簿メンテナンス</a>｜
 			<!--<a href="contents01.html">メニューは増減が可能です</a>｜ -->
 		</div>
 
