--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -9,9 +9,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="imagetoolbar" content="no" />
 <!-- 外部CSS読み込み -->
-<link href="assets/css/default.css" rel="stylesheet" type="text/css" />
+<link href="css/default.css" rel="stylesheet" type="text/css" />
 <!-- /ここまで -->
-<script type="text/javascript" src="js/default.js"></script>
 </head>
 
 <body>
@@ -177,110 +176,7 @@
 
 
 
-		<div id="head">
-			<!--<h1>キーワードをいれてください</h1>-->
-			<h2><a href="./">メール送信画面</a></h2>
-		</div>
-		<div id="head_menu">
-			<a href="トップ画面.html">HOME</a>｜
-			<a href="contents01.html">コンテンツ1</a>｜
-			<a href="contents01.html">コンテンツ2</a>｜
-			<a href="contents01.html">コンテンツ3</a>｜
-			<a href="contents01.html">コンテンツ4</a>｜
-			<a href="contents01.html">メニューは増減が可能です</a>｜
-		</div>
 
-		<div id="contents">
-			<div class='search-view'>
-				<input class='search-key' type="search" placeholder="Enter Email Address"/>
-				<ul class='list parent-list'></ul>
-			</div>
-
-			<!--<script src="cordova.js"></script>-->
-			<script src="lib/jquery.js"></script>
-			<script src="js/ParentService.js"></script>
-			<script src="js/app.js"></script>
-		</div>
-<!--
-		<div id="contents">
-
-			<h3>ようこそpop-02へ</h3>
-			<h4>レイアウトパターンを組み合わせていろいろなレイアウトをよりかんたんに</h4>
-			<h5>パターンA</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-			</div>
-			<h5>パターンA応用</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p><img src="img/common/sample_pic.gif" alt="サンプル" width="465" height="104" /></p>
-			</div>
-			<h4>横並びのレイアウトもかんたん</h4>
-			<h5>パターンB</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-			</div>
-			<h5>パターンB応用</h5>
-			<div class="typeB">
-				<div class="left">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-				<div class="right">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-			</div>
-			<h5>パターンB応用2</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p>デザインされた表の挿入もかんたん</p>
-					<table id="tbl_setA" width="98%">
-						<tr>
-							<th>サイトA</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトB</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトC</th>
-							<td>★★★</td>
-						</tr>
-						<tr>
-							<th>サイトD</th>
-							<td>★★</td>
-						</tr>
-					</table>
-				</div>
-			</div>
--->
 
 		</div><!-- contents end -->
 	</div><!-- container end -->
