メール送信画面の日時の表記変更と、バザーの説明文を変更

--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -118,9 +118,9 @@
    <tr>
    <form method="get" action="sendmail_result.html">
     <td><p><input type="text" readonly="readonly" name="event" value="バザー" /></p></td>
-    <td><p><input type="text" readonly="readonly" name="time" value="6月19日(日)" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="あああああああああああああ" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-06-19" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グランド" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="保育者の方や卒園生もぜひご参加ください" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
@@ -129,7 +129,7 @@
   <tr>
    <form method="get" action="sendmail_result.html">
     <td><p><input type="text" readonly="readonly" name="event" value="つくしっ子まつり" /></p></td>
-    <td><p><input type="text" readonly="readonly" name="time" value="9月10日(土)" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-09-10" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
    <td><p><input type="text" readonly="readonly" name="detail" value="いいいいいいいいいいいいい" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
@@ -143,7 +143,7 @@
 <tr>
    <form method="get" action="sendmail_result.html">
     <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
-    <td><p><input type="text" readonly="readonly" name="time" value="10月02日(日)" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-10-02" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
    <td><p><input type="text" readonly="readonly" name="detail" value="ううううううううううううううううう" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
