宛先リストの日時の表記と偽名と偽アドレスを追加

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -58,9 +58,9 @@
  <tr>
    <form method="post" action="mail.html">
     <td><p><CENTER>バザー</CENTER></p></td>
-    <td><p><CENTER>6月19日(日)</CENTER></p></td>
-    <td><p><CENTER>○○小学校</CENTER></p></td>
-    <td><p><CENTER>あああああああああああああ</CENTER></p></td>
+    <td><p><CENTER>2016-06-19</CENTER></p></td>
+    <td><p><CENTER>本保育園グラウンド</CENTER></p></td>
+    <td><p><CENTER>保護者の方や卒園生もぜひご参加ください</CENTER></p></td>
     </form>
    </tr>
 
@@ -74,13 +74,13 @@
     <div id="contents">
 
     <h3>宛先リスト</h3>
-    <p><CENTER>ああああああ</CENTER></p>
-    <p><CENTER>いいいいいい</CENTER></p>
-    <p><CENTER>うううううううう</CENTER></p>
-    <p><CENTER>えええええええ</CENTER></p>
-    <p><CENTER>おおおおおお</CENTER></p>
-    <p><CENTER>かかかかかか</CENTER></p>
-    <p><CENTER>ききききききき</CENTER></p>
+    <p><CENTER>亀田　鶴子:KameTusu@fakemail.com</CENTER></p>
+    <p><CENTER>田中　将大:YankeesTanaka@fakemail.com</CENTER></p>
+    <p><CENTER>中野　信子:BrainScientist@fakemail.com</CENTER></p>
+    <p><CENTER>朝　市子:Kanilka@fakemail.com</CENTER></p>
+    <p><CENTER>中島　廉:SakanaYasai@fakemail.com</CENTER></p>
+    <p><CENTER>土筆　紀子:TsukushiNoko@fakemail.com</CENTER></p>
+    
 
 
     <!-- <p><input type="submit" value="確認"></p> -->
