宛先リストの確認を押すとメールが起動し、宛先と本文が自動追加される

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -86,7 +86,11 @@
     <!-- <p><input type="submit" value="確認"></p> -->
 
 
-<a href="mailto:info@example.com"><p><input type="submit" value="確認"></p></a>
+<a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=バザー&amp;body=イベント名:バザー<br>
+日時：2016-06-19<br>
+場所：本保育園グラウンド<br>
+説明文：保護者の方や卒園生もぜひご参加くださ<br>
+><p><input type="submit" value="確認"></p></a>
    
       
 
