宛先リスト画面：確認押すと宛先、Subject、本文が記入された状態になる

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -86,11 +86,13 @@
     <!-- <p><input type="submit" value="確認"></p> -->
 
 
-<a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=バザー&amp;body=イベント名:バザー<br>
-日時：2016-06-19<br>
-場所：本保育園グラウンド<br>
-説明文：保護者の方や卒園生もぜひご参加くださ<br>
-><p><input type="submit" value="確認"></p></a>
+<p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=バザー&amp;body=
+イベント名:バザー%0d%0a
+日時：2016-06-19%0d%0a
+場所：本保育園グラウンド%0d%0a
+説明文：保護者の方や卒園生もぜひご参加ください。%0d%0a
+">
+<input type="submit" value="確認"></p></a>
    
       
 
