宛先リスト画面：メーラー文字化け対策

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -86,15 +86,35 @@
     <!-- <p><input type="submit" value="確認"></p> -->
 
 
-<p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=バザー&amp;body=
+<!--メーラー起動-->
+<!--
+<p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=つくしの子保育園：バザー&amp;body=
 イベント名:バザー%0d%0a
 日時：2016-06-19%0d%0a
 場所：本保育園グラウンド%0d%0a
 説明文：保護者の方や卒園生もぜひご参加ください。%0d%0a
+%0d%0a
+＜本文＞
 ">
 <input type="submit" value="確認"></p></a>
+-->
+
+
+<!--メーラー起動文字化け対策-->
    
+   <p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=%82%c2%82%ad%82%b5%82%cc%8eq%95%db%88%e7%89%80%81F%83o%83U%81%5b&amp;body=
+%83C%83x%83%93%83g%96%bc%3a%83o%83U%81%5b %0d%0a
+%93%fa%8e%9e%81F2016%2d06%2d19 %0d%0a
+%8f%ea%8f%8a%81F%96%7b%95%db%88%e7%89%80%83O%83%89%83E%83%93%83h %0d%0a
+%90%e0%96%be%95%b6%81F%95%db%8c%ec%8e%d2%82%cc%95%fb%82%e2%91%b2%89%80%90%b6%82%e0%82%ba%82%d0%82%b2%8eQ%89%c1%82%ad%82%be%82%b3%82%a2%81B %0d%0a
+%0d%0a
+%81%83%96%7b%95%b6%81%84
+
+">
+<input type="submit" value="確認"></p></a>
       
+
+
 
     </div><!-- contents end -->
   </div><!-- container end -->
