--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -23,7 +23,7 @@
   <div id="container">
 
     <div id="head">
-      <h1>宛先リスト表示画面</h1>
+      <h1>メール送信</h1>
      <!-- <h2>イベント</h2> -->
 <table cellspacing="10">
   
