タイトルがメール送信画面になっていたのでそれぞれ対応するものに修正

--- a/NameListSample/childmente.html
+++ b/NameListSample/childmente.html
@@ -2,7 +2,7 @@
 <html lang="ja" xml:lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>メール送信画面</title>
+<title>登録画面</title>
 <meta name="keywords" content="ホームページのキーワードを入れてください" />
 <meta name="description" content="ホームページの紹介文を入れてください" />
 <meta http-equiv="content-script-type" content="text/javascript" />
