宛先リスト画面：宛先編集ぼたんを追加

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -111,8 +111,11 @@
 %81%83%96%7b%95%b6%81%84
 
 ">
-<input type="submit" value="確認"></p></a>
+<input type="submit" value="送信画面"></p></a>
+
+
       
+<input type="submit" onclick="location.href='listmentenance.html'" value="宛先編集" />
 
 
 
