メール送信画面：説明文変更

--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -131,7 +131,7 @@
     <td><p><input type="text" readonly="readonly" name="event" value="つくしっ子まつり" /></p></td>
     <td><p><input type="text" readonly="readonly" name="time" value="2016-09-10" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="いいいいいいいいいいいいい" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="みんなで楽しみましょう！" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
@@ -145,7 +145,7 @@
     <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
     <td><p><input type="text" readonly="readonly" name="time" value="2016-10-02" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="ううううううううううううううううう" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="がんばろう！" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
