宛先リスト表示画面：ボタン位置変更

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -102,7 +102,7 @@
 
 <!--メーラー起動文字化け対策-->
    
-   <p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=%82%c2%82%ad%82%b5%82%cc%8eq%95%db%88%e7%89%80%81F%83o%83U%81%5b&amp;body=
+   <a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=%82%c2%82%ad%82%b5%82%cc%8eq%95%db%88%e7%89%80%81F%83o%83U%81%5b&amp;body=
 %83C%83x%83%93%83g%96%bc%3a%83o%83U%81%5b %0d%0a
 %93%fa%8e%9e%81F2016%2d06%2d19 %0d%0a
 %8f%ea%8f%8a%81F%96%7b%95%db%88%e7%89%80%83O%83%89%83E%83%93%83h %0d%0a
@@ -111,11 +111,12 @@
 %81%83%96%7b%95%b6%81%84
 
 ">
-<input type="submit" value="送信画面"></p></a>
+<input type="submit" value="送信画面"></a>
 
 
       
 <input type="submit" onclick="location.href='listmentenance.html'" value="宛先編集" />
+<input type="submit" onclick="location.href='TOP.html'" value="HOME" />
 
 
 
