Top画面とイベント情報登録画面のHOMEをTOPへ返す

--- a/NameListSample/TOP.html
+++ b/NameListSample/TOP.html
@@ -23,7 +23,7 @@
 			<h2><a href="./">つくしの子保育園</a></h2>
 		</div>
 		<div id="head_menu">
-			<a href="./">HOME</a>｜
+			<a href="TOP.html">HOME</a>｜
 			<a href="entryevent.html">イベント情報登録</a>｜
 			<a href="sendmail.html">メール送信画面</a>｜
 			<a href="changeevent.html">イベントの変更</a>｜
