--- a/NameListSample/entryevent.html
+++ b/NameListSample/entryevent.html
@@ -24,7 +24,7 @@
 			<h2><a href="./">イベント情報登録</a></h2>
 		</div>
 		<div id="head_menu">
-			<a href="./">HOME</a>｜
+			<a href="TOP.html">HOME</a>｜
 			<a href="entryevent.html">イベント情報登録</a>｜
 			<a href="sendmail.html">メール送信画面</a>｜
 			<a href="changeevent.html">イベントの変更</a>｜
