--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -127,7 +127,7 @@
    
 
   <tr>
-   <form method="get" action="sendmail_result.html">
+   <form method="get" action="sendmail_result2.html">
     <td><p><input type="text" readonly="readonly" name="event" value="つくしっ子まつり" /></p></td>
     <td><p><input type="text" readonly="readonly" name="time" value="2016-09-10" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
@@ -141,7 +141,7 @@
 
 
 <tr>
-   <form method="get" action="sendmail_result.html">
+   <form method="get" action="sendmail_result3.html">
     <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
     <td><p><input type="text" readonly="readonly" name="time" value="2016-10-02" /></p></td>
    <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
