デモ用に少し変更した

--- a/NameListSample/TOP.html
+++ b/NameListSample/TOP.html
@@ -3,7 +3,7 @@
 <head>
 <script src="js/top.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ホームページの名前を入れてください</title>
+<title>イベント・名簿管理タスカル</title>
 <meta name="keywords" content="ホームページのキーワードを入れてください" />
 <meta name="description" content="ホームページの紹介文を入れてください" />
 <meta http-equiv="content-script-type" content="text/javascript" />
