デモのために少し変更した

--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -119,8 +119,8 @@
    <form method="get" action="sendmail_result.html">
     <td><p><input type="text" readonly="readonly" name="event" value="バザー" /></p></td>
     <td><p><input type="text" readonly="readonly" name="time" value="2016-06-19" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グランド" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="保育者の方や卒園生もぜひご参加ください" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グラウンド" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="保育者の方や卒園生もぜひご参加ください。" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
@@ -128,10 +128,10 @@
 
   <tr>
    <form method="get" action="sendmail_result2.html">
-    <td><p><input type="text" readonly="readonly" name="event" value="つくしっ子まつり" /></p></td>
-    <td><p><input type="text" readonly="readonly" name="time" value="2016-09-10" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="みんなで楽しみましょう！" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-06-04" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グラウンド" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="今年も運動会の季節がやってまいりました！園児達の勇姿をぜひご覧ください。" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
@@ -142,10 +142,10 @@
 
 <tr>
    <form method="get" action="sendmail_result3.html">
-    <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
-    <td><p><input type="text" readonly="readonly" name="time" value="2016-10-02" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="place" value="○○小学校" /></p></td>
-   <td><p><input type="text" readonly="readonly" name="detail" value="がんばろう！" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="event" value="入園式" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-04-09" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園体育館" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="ご入園おめでとうございます。心より歓迎申し上げます。" /></p></td>
     <td><p><input type="submit" value="選択"></p></td>
     </form>
    </tr>
