--- a/NameListSample/sendmail_result2.html
+++ b/NameListSample/sendmail_result2.html
@@ -57,10 +57,10 @@
 
  <tr>
    <form method="post" action="mail.html">
-    <td><p><CENTER>つくしっ子まつり</CENTER></p></td>
-    <td><p><CENTER>2016-09-10</CENTER></p></td>
-    <td><p><CENTER>○○小学校</CENTER></p></td>
-    <td><p><CENTER>みんなで楽しみましょう！</CENTER></p></td>
+    <td><p><CENTER>運動会</CENTER></p></td>
+    <td><p><CENTER>2016-06-04</CENTER></p></td>
+    <td><p><CENTER>本保育園グラウンド</CENTER></p></td>
+    <td><p><CENTER>今年も運動会の季節がやってまいりました！園児達の勇姿をぜひご覧ください。</CENTER></p></td>
     </form>
    </tr>
 
