--- a/NameListSample/sendmail_result3.html
+++ b/NameListSample/sendmail_result3.html
@@ -57,10 +57,10 @@
 
  <tr>
    <form method="post" action="mail.html">
-    <td><p><CENTER>運動会</CENTER></p></td>
-    <td><p><CENTER>2016-10-02</CENTER></p></td>
-    <td><p><CENTER>○○小学校</CENTER></p></td>
-    <td><p><CENTER>がんばろう！</CENTER></p></td>
+    <td><p><CENTER>入園式</CENTER></p></td>
+    <td><p><CENTER>2016-04-09</CENTER></p></td>
+    <td><p><CENTER>本保育園体育館</CENTER></p></td>
+    <td><p><CENTER>ご入園おめでとうございます。心より歓迎申し上げます。</CENTER></p></td>
     </form>
    </tr>
 
