--- a/NameListSample/changeevent.html
+++ b/NameListSample/changeevent.html
@@ -2,7 +2,7 @@
 <html lang="ja" xml:lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>イベントの変更</title>
+<title>イベント変更</title>
 <meta name="keywords" content="ホームページのキーワードを入れてください" />
 <meta name="description" content="ホームページの紹介文を入れてください" />
 <meta http-equiv="content-script-type" content="text/javascript" />
@@ -15,104 +15,177 @@
 
 <body>
 
+
+<Div Align="center">
+
+<p><img src="assets/img/common/cool_02bk.lzh.gif" alt="サンプル画像" width="1000" height="150" /></p>
+<p><img src="assets/img/common/bg_menu.jpg" alt="サンプル画像" width="800" height="20" /></p>
+
+
 	<div id="container">
+	
+<!--
+				
+				<table cellspacing="10">
+  <caption>メール送信：イベント選択</caption>
+  <thead style="background:#ffccff">
+   <tr>
+    <th>イベント名</th>
+    <th>日時</th>
+    <th>場所</th>
+    <th>説明文</th>
+    <th>選択</th>
+   </tr>
+  </thead>
+  <tfoot style="background:#eeeeee">
+   <tr>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+   </tr>
+  </tfoot>
+  <tbody>
+   <tr>
+   <form method="get" action="mail.html">
+    <td><p><input type="text" name="event"></p></td>
+    <td><p><input type="text" name="time"></p></td>
+    <td><p><input type="text" name="place"></p></td>
+    <td><p><input type="text" name="detail"></p></td>
+    <td><p><input type="submit" value="選択"></p></td>
+    </form>
+   </tr>
+   <tr>
+    <form method="get" action="mail.html">
+    <td><p><input type="text" name="event"></p></td>
+    <td><p><input type="text" name="time"></p></td>
+    <td><p><input type="text" name="place"></p></td>
+    <td><p><input type="text" name="detail"></p></td>
+    <td><p><input type="submit" value="選択"></p></td>
+    </form>
+   </tr>
+   <tr>
+  <form method="get" action="mail.html">
+    <td><p><input type="text" name="event"></p></td>
+    <td><p><input type="text" name="time"></p></td>
+    <td><p><input type="text" name="place"></p></td>
+    <td><p><input type="text" name="detail"></p></td>
+    <td><p><input type="submit" value="選択"></p></td>
+    </form>
+   </tr>
+   <tr>
+   <form method="get" action="mail.html">
+    <td><p><input type="text" name="event"></p></td>
+    <td><p><input type="text" name="time"></p></td>
+    <td><p><input type="text" name="place"></p></td>
+    <td><p><input type="text" name="detail"></p></td>
+    <td><p><input type="submit" value="選択"></p></td>
+    </form>
+   </tr>
+  </tbody>
+</table>
 
-		<div id="head">
-			<h1>キーワードをいれてください</h1>
-			<h2><a href="./">イベントの変更</a></h2>
-		</div>
-		<div id="head_menu">
-			<a href="TOP.html">HOME</a>｜
-			<a href="entryevent.html">イベント情報登録</a>｜
-			<a href="sendmail.html">メール送信画面</a>｜
-			<a href="changeevent.html">イベントの変更</a>｜
-			<a href="listmentenance.html">名簿メンテナンス</a>｜
-			<!--<a href="contents01.html">メニューは増減が可能です</a>｜ -->
-		</div>
+-->
 
-		<div id="contents">
 
-			<h3>ようこそpop-02へ</h3>
-			<h4>レイアウトパターンを組み合わせていろいろなレイアウトをよりかんたんに</h4>
-			<h5>パターンA</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-			</div>
-			<h5>パターンA応用</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p><img src="img/common/sample_pic.gif" alt="サンプル" width="465" height="104" /></p>
-			</div>
-			<h4>横並びのレイアウトもかんたん</h4>
-			<h5>パターンB</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-			</div>
-			<h5>パターンB応用</h5>
-			<div class="typeB">
-				<div class="left">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-				<div class="right">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-			</div>
-			<h5>パターンB応用2</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p>デザインされた表の挿入もかんたん</p>
-					<table id="tbl_setA" width="98%">
-						<tr>
-							<th>サイトA</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトB</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトC</th>
-							<td>★★★</td>
-						</tr>
-						<tr>
-							<th>サイトD</th>
-							<td>★★</td>
-						</tr>
-					</table>
-				</div>
-			</div>
+
+<!--決め打ち用フォーム-->
+
+<!-- <table cellspacing="10"> -->
+<table>
+  <caption>イベント変更：イベント選択</caption>
+  <thead style="background:#ffccff">
+   <tr>
+    <th>イベント名</th>
+    <th>日時</th>
+    <th>場所</th>
+    <th>説明文</th>
+    <th>選択</th>
+   </tr>
+  </thead>
+  <tfoot style="background:#eeeeee">
+   <tr>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+    <td>　</td>
+   </tr>
+  </tfoot>
+  <tbody>
+   
+   <tr>
+   <form method="get" action="sendmail_result.html">
+    <td><p><input type="text" readonly="readonly" name="event" value="バザー" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-06-19" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グラウンド" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="保育者の方や卒園生もぜひご参加ください。" /></p></td>
+    <td><p><input type="submit" value="変更"></p></td>
+    </form>
+   </tr>
+   
+
+  <tr>
+   <form method="get" action="sendmail_result2.html">
+    <td><p><input type="text" readonly="readonly" name="event" value="運動会" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-06-04" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園グラウンド" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="今年も運動会の季節がやってまいりました！園児達の勇姿をぜひご覧ください。" /></p></td>
+    <td><p><input type="submit" value="変更"></p></td>
+    </form>
+   </tr>
+
+
+
+
+
+<tr>
+   <form method="get" action="sendmail_result3.html">
+    <td><p><input type="text" readonly="readonly" name="event" value="入園式" /></p></td>
+    <td><p><input type="text" readonly="readonly" name="time" value="2016-04-09" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="place" value="本保育園体育館" /></p></td>
+   <td><p><input type="text" readonly="readonly" name="detail" value="ご入園おめでとうございます。心より歓迎申し上げます。" /></p></td>
+    <td><p><input type="submit" value="変更"></p></td>
+    </form>
+   </tr>
+   </table>
+
+
+
+<!--
+   <tr>
+   <form method="post" action="mail.html">
+    <td><p><CENTER>運動会</CENTER></p></td>
+    <td><p><CENTER>10月02日(日)</CENTER></p></td>
+    <td><p><CENTER>○○小学校</CENTER></p></td>
+    <td><p><CENTER>ううううううううううううううううう</CENTER></p></td>
+    <td><p><input type="submit" value="選択"></p></td>
+    </form>
+   </tr>
+  </tbody>
+
+
+-->
+
+
+
+
+
+
+
+
+
+
 
 		</div><!-- contents end -->
 	</div><!-- container end -->
 
-	<div id="copy">Copyright (C) <script language="javascript">document.write(new Date().getFullYear())</script> サイト名を入れてください. All Rights Reserved.</div>
+	<!--<div id="copy">Copyright (C) <script language="javascript">document.write(new Date().getFullYear())</script> つくしの子保育園イベント. All Rights Reserved.</div>
+	-->
+
+	</Div>
+
 
 </body>
 </html>
