--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -60,7 +60,7 @@
     <td><p><CENTER>バザー</CENTER></p></td>
     <td><p><CENTER>2016-06-19</CENTER></p></td>
     <td><p><CENTER>本保育園グラウンド</CENTER></p></td>
-    <td><p><CENTER>保護者の方や卒園生もぜひご参加ください</CENTER></p></td>
+    <td><p><CENTER>保護者の方や卒園生もぜひご参加ください。</CENTER></p></td>
     </form>
    </tr>
 
@@ -87,8 +87,8 @@
 
 
 <!--メーラー起動-->
-<!--
-<p><a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=つくしの子保育園：バザー&amp;body=
+
+<a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=つくしの子保育園：バザー&amp;body=
 イベント名:バザー%0d%0a
 日時：2016-06-19%0d%0a
 場所：本保育園グラウンド%0d%0a
@@ -96,11 +96,11 @@
 %0d%0a
 ＜本文＞
 ">
-<input type="submit" value="確認"></p></a>
--->
+<input type="submit" value="送信画面"></a>
 
 
-<!--メーラー起動文字化け対策-->
+
+<!--メーラー起動文字化け対策
    
    <a href="mailto:KameTusu@fakemail.com,YankeesTanaka@fakemail.com,BrainScientist@fakemail.com,Kanilka@fakemail.com,SakanaYasai@fakemail.com,TsukushiNoko@fakemail.com?subject=%82%c2%82%ad%82%b5%82%cc%8eq%95%db%88%e7%89%80%81F%83o%83U%81%5b&amp;body=
 %83C%83x%83%93%83g%96%bc%3a%83o%83U%81%5b %0d%0a
@@ -112,7 +112,7 @@
 
 ">
 <input type="submit" value="送信画面"></a>
-
+-->
 
       
 <input type="submit" onclick="location.href='listmentenance.html'" value="宛先編集" />
